[project]
name = "python-image-ascii"
version = "2.1.0"
description = "Convert images to ASCII art with color, block characters, and HTML export"
requires-python = ">=3.9"
dependencies = [
    "Pillow>=10.0",
    "numpy>=1.24",
    "requests>=2.31",
    "textual>=0.50",
]

[tool.setuptools]
py-modules = ["img2ascii", "tui"]

[project.scripts]
img2ascii = "img2ascii:main"
img2ascii-tui = "tui:run"
